<resources>
    <string name="app_name">EJ-Zərdabi Yolu</string>
    <string name="title_user_login">Giriş</string>
    <string name="hint_enter_password">Şifrə</string>
    <string name="button_sign_in">Daxil ol</string>
    <string name="textView_not_have_account">Hesabınız yoxdur? Burada qeydiyyatdan keçin!</string>
    <string name="title_user_registration">İstifadəçi Qeydiyyatı</string>
    <string name="radioButton_student">Şagird</string>
    <string name="radioButton_teacher">Müəllim</string>
    <string name="radioButton_school">Məktəb</string>
    <string name="hint_enter_email">İstifadəçi Adı</string>
    <string name="button_next">Növbəti</string>
    <string name="textView_already_registered">Hesabınız var? Buradan daxil olun!</string>
    <string name="button_log_out">Çıxış</string>
    <string name="title_school_information">Məktəb Hesab Məlumatı</string>
    <string name="hint_school_name">Ad</string>
    <string name="hint_school_information">Məktəb Haqqında Məlumat</string>
    <string name="hint_lesson_name">Fənni daxil et</string>
    <string name="button_add_lesson">Əlavə Et</string>
    <string name="hint_class_name">Sinfi daxil et</string>
    <string name="button_add_class">Əlavə Et</string>
    <string name="button_sign_up">Qeydiyyatdan Keç</string>
    <string name="title_student_information">Şagird Hesab Məlumatı</string>
    <string name="title_teacher_information">Müəllim Hesab Məlumatı</string>
    <string name="hint_teacher_biography">Bioqrafiya</string>
    <string name="buttonNext">Növbəti</string>
    <string name="title_select_class_lesson">SİNİF və DƏRS seçin</string>
    <string name="title_student_profile">Şagird Səhifəsi</string>
    <string name="title_data_show">Məlumat</string>
    <string name="azerbaijan">Azərbaycan</string>
    <string name="english">İngilis</string>
    <string name="russian">Rus</string>
    <string name="date">Gün</string>
    <string name="lesson">Fənn</string>
    <string name="order_type">Sıralama Tipi</string>
    <string name="languages">Dillər</string>
    <string name="students">Şagirdlər</string>
    <string name="teacher_profile">Müəllim Hesabı</string>
    <string name="time">Vaxt</string>
    <string name="lesson_rate">Dərs qiyməti</string>
    <string name="behaviour_rate">Davranış qiyməti</string>
    <string name="name">Ad</string>
    <string name="surname">Soyad</string>
    <string name="error_check_internet">Xəta baş verdi. İnterneti yoxlayın!</string>
    <string name="data_saving">Məlumat saxlanılır…</string>
    <string name="all_student_data">Xahiş olunur bütün şagird məlumatlarını daxil edin!</string>
    <string name="sure_to_exit">Daxil edilmiş məlumatlar silinəcək! Çıxmaq istədiyinizdən əminsinizmi?</string>
    <string name="yes">Bəli</string>
    <string name="no">Xeyr</string>
    <string name="sure_to_save">Hələdə daxil etdiyiniz məlumatları dəyişə bilərsiniz. Yadda saxlamaqdan əminsizmi?</string>
    <string name="opening_profile">Hesab açılır…</string>
    <string name="maybe_profile_data_wrong">Hesab açılarkən xəta baş verdi. Hesab məlumatı səhv ola bilər</string>
    <string name="enter_email">Doğru istifadəçi adını daxil edin (uzunluq > 4)</string>
    <string name="enter_password">Doğru Şifrəni daxil edin (uzunluq > 7)</string>
    <string name="signing">Hesaba daxil olunur…</string>
    <string name="incorrect_email">Xəta baş verdi. Hesab məlumatlarını və ya İnternet əlaqəsini yoxlayın!</string>
    <string name="leeson_list">Fənn Listi…</string>
    <string name="enter_school_name">Məktəbi daxil edin</string>
    <string name="enter_school_information">Məktəb haqqında məlumat daxil edin</string>
    <string name="enter_lessons">Dərsləri daxil edin</string>
    <string name="enter_classes">Sinifləri daxil edin</string>
    <string name="registering">Qeydiyyatdan keçilir…</string>
    <string name="could_not_register">Qeydiyyatdan keçmək mümkün olmadı. Bu email mövcud ola bilər</string>
    <string name="data_loading">Məlumat yüklənir…</string>
    <string name="school_list">Məktəb Listi…</string>
    <string name="enter_student_name">Adı daxil edin</string>
    <string name="enter_student_surname">Soyadı daxil edin</string>
    <string name="select_school_name">Məktəb adını daxil edin</string>
    <string name="select_class_name">Sinifi daxil edin</string>
    <string name="select_lesson_name">Fənni daxil edin</string>
    <string name="enter_teacher_name">Adı daxil edin</string>
    <string name="enter_teacher_surname">Soyadı daxil edin</string>
    <string name="enter_biography">Bioqrafiyanı daxil edin</string>
    <string name="class_list">Sinif Listi…</string>
    <string name="student">Şagird</string>
    <string name="teacher">Müəllim</string>
    <string name="biography">Bioqrafiya</string>
    <string name="extra_information">Əlavə Məlumat</string>
    <string name="this_school">Mənim Hesabım</string>
    <string name="school_profile">Məktəb Hesabı</string>
    <string name="subject">Mövzu</string>
    <string name="lesson_subject">Dərsin Mövzusu</string>
    <string name="delete">Sil</string>
    <string name="save">Qeyd et</string>
    <string name="not_deleted">Silinə bilmədi</string>
    <string name="saved">Yadda saxlanıldı</string>
    <string name="not_saved">Yadda saxlanıla bilmədi</string>
    <string name="item_deleted">Silindi</string>
    <string name="current_class">Sinif</string>
    <string name="information">Haqqında</string>
    <string name="classes">Siniflər</string>
    <string name="lessons">Fənlər</string>
    <string name="not_present">İştirak etmir</string>
    <string name="select_time">Vaxtı seçin</string>
    <string name="sure_to_delete">Bu məlumatı silmək istədiyinizdən əminsinizmi?</string>
    <string name="profit">Gəlirlər</string>
    <string name="expenditure">Xərclər</string>
    <string name="change_profile_data">Hesab məlumat dəyişikliyi</string>
    <string name="profiles">Hesablar</string>
    <string name="nav_header_subtitle"> </string>
    <string name="search">Axtar</string>
    <string name="enter_lesson_rate">Dərs Qiyməti</string>
    <string name="enter_behaviour_rate">Davranış Balı</string>
    <string name="can_be_entered_extra_information">Əlavə məlumat daxil edilə bilər</string>
    <string name="create_profile">Hesab Yarat</string>
    <string name="phone_number">Telefon Nömrəsi</string>
    <string name="phone_number_and_extra">Telefon Nömrəsi və Əlavə Məlumat</string>
    <string name="enter_phone_number">Telefon Nömrənsini daxil edin</string>
    <string name="store_data">İxrac et</string>
    <string name="successful_export">Məlumat uğurla saxlanıldı</string>
    <string name="unseccessful_export">Uğursuz yadda saxlanılma</string>
    <string name="device_storage_error">Yaddaş əlçatımlı deyil</string>
    <string name="deleting_profile">HESABı SİL</string>
    <string name="only_this">Yalnız bu</string>
    <string name="all">Hamısı</string>
    <string name="m_cancel">Ləğv et</string>
    <string name="grid">Cədvəl</string>
    <string name="ok">Yaxşı</string>
    <string name="exit">Çıx</string>
    <string name="Class">Sinif</string>
    <string name="money_per_hour">Saatlıq Pul</string>
    <string name="enter_amount">Miqdarı daxil edin</string>
    <string name="paying_salary">Maaşın ödənilməsi</string>
    <string name="enter_name_expenditure">Xərcə ad verin</string>
    <string name="special_expenditure">Xüsusi Xərclər</string>
    <string name="enter_name_of_profit">Gəlirə ad verin</string>
    <string name="add_profit">Əlavə et</string>
    <string name="student_payment">Şagird Ödəmələri</string>
    <string name="money_per_month">Aylıq Pul</string>
    <string name="special_profit">Xüsusi Gəlir</string>
    <string name="other">Digər</string>
    <string name="radioButton_director">Direktor</string>
    <string name="director_profile_information">Direktor Hesab Məlumatı</string>
    <string name="student_profit">Şagird</string>
    <string name="salary">Maaş</string>
    <string name="budget">Büdcə</string>
    <string name="edit">Redaktə Et</string>
    <string name="initial">İlkin Məbləğ</string>
    <string name="paid">Ödənilən Məbləğ</string>
    <string name="result">Nəticə</string>
    <string name="registration">Qeydiyyat</string>
    <string name="save_data">Yadda Saxla</string>
    <string name="password_not_matched">Şifrə uyğun deyil</string>
    <string name="confirm_password">Şifrəni Təsdiqlə</string>
    <string name="delete_class_name">Sinfi Sil</string>
    <string name="sure_to_delete_class">Bu SİNFi silmək istədiyinizdən əminsinizmi?</string>
    <string name="delete_lesson_name">Dərsi sil</string>
    <string name="sure_to_delete_lesson">Bu DƏRSi silmək istədiyinizdən əminsinizmi?</string>
    <string name="delete_profile">HESABı sil</string>
    <string name="sure_to_delete_profile">Bu HESABı silmək istədiyinizdən əminsinizmi?</string>
    <string name="nothing_info">Məlumat yoxdur</string>
    <string name="username">İstifadəçi adı</string>
    <string name="password">Şifrə</string>
    <string name="enter_money_month">Aylıq Pulu Daxil Et</string>
    <string name="enter_money_hour">Hər Saat Üçün Ödənişi Daxil Et</string>
    <string name="radioButton_manager">Menecer</string>
    <string name="start_in_time">Dərsin Vaxtında Başladılması</string>
    <string name="check_homework">Tapşırıqların Yoxlanılması</string>
    <string name="suitable_dressed">Geyim Balı</string>
    <string name="work_on_mistakes">Səhvlər Üzərində İş</string>
    <string name="question_answer">Sorğu/Sual</string>
    <string name="manage_time">Vaxtın İdarə Olunması</string>
    <string name="teach_new_subject">Yeni Mövzunun Keçirilməsi</string>
    <string name="giving_homework">Ev Tapşırığının Verilməsi</string>
    <string name="using_modern_technology">Müasir Texnologiyadan İstifadə</string>
    <string name="using_visual_aids">Əyani Vəsaitlərdən İstifadə</string>
    <string name="activate">Aktiv Et</string>
    <string name="deactivate">Deaktiv Et</string>
    <string name="management">Menecer</string>
    <string name="active">Aktiv</string>
    <string name="not_active">Deaktiv</string>
    <string name="deleted_persons">Silinmiş Şəxslər</string>
    <string name="send">Göndər</string>
    <string name="messages">Mesajlar</string>
    <string name="send_message">Mesaj Göndər</string>
    <string name="activation_teacher">Müəllim Hesabının Aktivləşdirilməsi</string>
    <string name="reason">Səbəb</string>
    <string name="name_reason">Adınız və Silinmə Səbəbi</string>
    <string name="cant_record_out_of_lesson">Dərsdən kənar qeyd edilə bilməz.</string>
    <string name="cant_record_twice">Bir dərs iki dəfə qeyd edilə bilməz.</string>
    <string name="statement">Çıxarış</string>
    <string name="begin_date">Başlanğıc Gün</string>
    <string name="end_date">Son Gün</string>
    <string name="calculate">Hesabla</string>
    <string name="name_of_statement">Çıxarışa ad verin</string>
    <string name="select_beginDate_and_endDate">Başlanğıc və Son Günləri seçin</string>
    <string name="payed_money">Ödənilmiş Məbləğ</string>
    <string name="debt">Borc</string>
    <string name="registration_date">Qeydiyyat Günü</string>
    <string name="incorrect_decimal_value">Yanlış miqdar daxil etdiniz. Qeydə alınmadı.</string>
    <string name="send_all">Hamıya Göndər</string>
    <string name="note_lesson">Dərsi Qeydə Al</string>
    <string name="select_lesson_time">Dərs Vaxtını Seçin</string>
    <string name="dont_have_lesson">Qeydə alınmış dərs yoxdur!</string>
    <string name="payment_history">Ödəmə Tarixçəsi</string>
    <string name="payment_completed">ÖDƏMƏ TAMAMLANDI</string>
    <string name="other_payments">Digər Ödəmələr</string>
    <string name="teacher_expenditure">Müəllim Xərcləri</string>
    <string name="other_expenditure">Digər Xərclər</string>
    <string name="name_surname">Ad, Soyad</string>
    <string name="backup">Yedəkləmə</string>
</resources>