<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_other_payments"
            android:icon="@drawable/ic_profit_white"
            android:title="@string/other_payments" />
        <item
            android:id="@+id/nav_create_profile"
            android:icon="@drawable/ic_add_white"
            android:title="@string/create_profile" />
        <item
            android:id="@+id/nav_grid"
            android:icon="@drawable/ic_grid_white"
            android:title="@string/grid" />
        <item
            android:id="@+id/nav_backup"
            android:icon="@drawable/ic_backup_white"
            android:title="@string/backup"/>
        <item
            android:id="@+id/nav_deleted_users"
            android:icon="@drawable/ic_deleted_user_white"
            android:title="@string/deleted_persons"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_log_out_white"
            android:title="@string/button_log_out" />
    </group>

</menu>
